# Desafio_t-cnico_python

./: readme.md
scrapper/: .gcloudignore  DockerFile  cloudbuild.yaml  pyproject.toml  requirements.txt
scrapper/app/: main.py
scrapper/notebooks/: scrapper-test.ipynb
scrapper/src/scrapper/: __init__.py
